# hedgehog-talk

./: .ghc.environment.x86_64-linux-8.6.5  CHANGELOG.md  hedgehog-talk.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.5/: hedgehog-talk-0.1-inplace.conf  package.cache
presentation/tex/: bib.bib  main.tex
presentation/tex/chapters/: approaches_to_property_testing.tex  code_examples.tex  examples_of_state_machine_testing.tex  further_topics.tex  preamble.tex  state_machine_testing.tex  what_is_property_testing.tex
src/: Basic.hs  Class.hs  Exception.hs  QuickCheck.hs  Roundtrip.hs  StateMachine.hs  StateMachinePar.hs
